# samvaad

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini  railway.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run_tests.py
.do/: app.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260127_add_settings_persistence.py
backend/: main.py  test.py
backend/pipeline/: deletion.py  docling_wrapper.py  embedding.py  ingest_pipeline.py  ingestion.py  preprocessing.py  query.py  vectorstore.py
backend/pipeline/deletion/: deletion.py
backend/pipeline/generation/: generation.py  kokoro_tts.py  piper_tts.py
backend/pipeline/ingestion/: chunking.py  embedding.py  ingestion.py
backend/pipeline/retrieval/: query.py  query_voice.py
backend/pipeline/vectorstore/: vectorstore.py
backend/utils/: clean_markdown.py  filehash_db.py  filehash_schema.sql  gpu_utils.py
data/documents/: ballism copy.txt  ballism.txt
frontend/: README.md  biome.json  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: AGENTS.md  globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/chat/: AttachmentButton.tsx  ChatView.tsx  InputBar.tsx  LatencyIndicator.tsx  MessageBubble.tsx  MessageList.tsx  MobileTextControls.tsx  MobileVoiceControls.tsx  PersonaSelector.tsx  PinnedMessagesBar.tsx  PinnedMessagesModal.tsx  SourcesPanel.tsx  StrictModeToggle.tsx  TTSToggle.tsx  VoiceSettings.tsx  WelcomeScreen.tsx
frontend/components/landing/: AppMockup.tsx  Background.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  RotatingText.tsx
frontend/components/login/: LoginBanner.tsx  LoginForm.tsx
frontend/components/modals/: DeleteConfirmModal.tsx  RenameModal.tsx  SettingsModal.tsx  UniversalSearchModal.tsx  index.ts
frontend/components/navigation/: IconNavRail.tsx
frontend/components/onboarding/: ScribbleOverlay.tsx  WalkthroughController.tsx
frontend/components/providers/: PipecatProvider.tsx
frontend/components/shared/: Header.tsx
frontend/components/ui/: ChatToaster.tsx  action-tooltip.tsx  button.tsx  input.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useAudioDevices.ts  useFileProcessor.ts  useGroupedConversations.ts  usePlatform.ts
frontend/lib/: api.ts  constants.ts  utils.ts
mobile/: .env.example  .npmrc  app.json  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
samvaad/: __init__.py
samvaad/api/: AGENTS.md  deps.py  main.py
samvaad/core/: auth.py  context.py  context_manager.py  memory.py  memory_tools.py  types.py  unified_context.py  voyage.py
samvaad/db/: AGENTS.md  apply_trigger.py  conversation_service.py  init_db.py  migrate_dedup.py  models.py  service.py  session.py  sync_users.sql  user_settings_service.py
samvaad/interfaces/: cli.py  text_agent.py  voice_agent.py
samvaad/prompts/: __init__.py  builder.py  modes.py  personas.py  styles.py
samvaad/utils/: citations.py  clean_markdown.py  filehashes.sqlite3  gpu_utils.py  logger.py  onnx_cross_encoder.py  onnx_embedding.py  rag_tool.py  text.py  text_filters.py
tests/: __init__.py  conftest.py  repro_full_stack.py  verify_dedup_leak.py
tests/integration/: __init__.py  test_conversation_api.py  test_full_pipeline.py  test_hallucination.py  test_persistence.py  test_postgres_flow.py
tests/unit/: __init__.py  test_api.py  test_api.py.disabled  test_auth.py  test_chunking.py  test_clean_markdown.py  test_cli.py  test_conversation_manager.py  test_conversations.py  test_db_service.py  test_deletion.py  test_deps.py  test_embedding.py  test_generation.py  test_ingestion.py  test_kokoro_tts.py  test_markdown_utils.py  test_onnx_cross_encoder.py  test_onnx_embedding.py  test_piper_tts.py  test_preprocessing.py  test_prompts.py  test_query.py  test_query_voice.py  test_security.py  test_utils.py  test_vectorstore.py  test_voice_agent.py  test_voice_mode_class.py
tests/utils/: __init__.py  mock_audio.py
(+49 files in other folders)
